--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1494,8 +1494,8 @@
   "boilerplate.containers.Payroll.Attendance.isNotUpdateAtt": "Not Update Existing Attendance",
   
   "boilerplate.containers.Payroll.Attendance.Location": "Location",
-
-
+  "boilerplate.containers.Payroll.Attendance.isDrop": "Delete Period for Employee",
+  "boilerplate.containers.Payroll.Attendance.isStop": "Stop Period for Employee",
 
   "boilerplate.containers.Payroll.transportaion.ip":"Transportaion",  
   "boilerplate.containers.Payroll.transportaion.DeviceUpdateTitle":"Update Device",
