create `RecHrTest` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -813,6 +813,9 @@
   "boilerplate.components.tables.codes.contractperiod": "مدة العقد",
   "boilerplate.components.tables.codes.symbol": "الرمز",
   "boilerplate.components.tables.codes.currency": "العملة",
+  "boilerplate.components.tables.codes.arDesc": "الوصف بالعربية",
+  "boilerplate.components.tables.codes.enDesc": "الوصف بالانجليزية",
+  "boilerplate.components.tables.codes.finalGrad": "التقدير النهائي",
   "boilerplate.components.tables.codes.month": "الشهر",
   "boilerplate.components.tables.codes.year": "السنة",
   "boilerplate.components.tables.codes.rate": "المعدل",
