--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -799,6 +799,9 @@
   "boilerplate.components.tables.codes.name": "Arabic Name",
   "boilerplate.components.tables.codes.enname": "English Name",
   "boilerplate.components.tables.codes.govname": "Governorate",
+  "boilerplate.components.tables.codes.arDesc": "Arabic Description",
+  "boilerplate.components.tables.codes.enDesc": "English Description",
+  "boilerplate.components.tables.codes.finalGrad": "Final Grade",
   "boilerplate.components.tables.codes.insuranceOffices": "Insurance Offices",
   "boilerplate.components.tables.codes.action": "Action",
   "boilerplate.components.tables.codes.address": "Address",
