--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -816,6 +816,8 @@
   "boilerplate.components.tables.codes.arDesc": "الوصف بالعربية",
   "boilerplate.components.tables.codes.enDesc": "الوصف بالانجليزية",
   "boilerplate.components.tables.codes.finalGrad": "التقدير النهائي",
+  "boilerplate.components.tables.codes.elJob": "الوظيفة",
+  "boilerplate.components.tables.codes.elPercent": "النسبة",
   "boilerplate.components.tables.codes.month": "الشهر",
   "boilerplate.components.tables.codes.year": "السنة",
   "boilerplate.components.tables.codes.rate": "المعدل",
