create `HRApplicationEvaluation` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2055,6 +2055,37 @@
   "boilerplate.containers.Payroll.recruitment.description": "الوصف",
   "boilerplate.containers.Payroll.recruitment.section": "القطاع",
   "boilerplate.containers.Payroll.recruitment.expireDate": "تاريخ الانتهاء",
+  "boilerplate.containers.Payroll.recruitment.applicantName": "اسم التطبيق",
+  "boilerplate.containers.Payroll.recruitment.applicantDate": "تاريخ مقدم الطلب",
+  "boilerplate.containers.Payroll.recruitment.hrStatus": "حالة الموارد البشرية",
+  "boilerplate.containers.Payroll.recruitment.technicalStatus": "الحالة الفنية",
+  "boilerplate.containers.Payroll.recruitment.managerialStatus": "الحالة الإدارية",
+  "boilerplate.containers.Payroll.recruitment.JobAdv": "إعلان الوظيفة",
+  "boilerplate.containers.Payroll.recruitment.status": "الحالة",
+  "boilerplate.containers.Payroll.recruitment.technical": "التقني",
+  "boilerplate.containers.Payroll.recruitment.managerNotReviewCV": "المدير الفني لم يراجع السيرة الذاتية",
+  "boilerplate.containers.Payroll.recruitment.managerialLevel": "المستوى الإداري",
+  "boilerplate.containers.Payroll.recruitment.workFrom": "العمل من",
+  "boilerplate.containers.Payroll.recruitment.gender": "النوع",
+  "boilerplate.containers.Payroll.recruitment.confirm": "تأكيد",
+  "boilerplate.containers.Payroll.recruitment.reason": "السبب",
+  "boilerplate.containers.Payroll.recruitment.pending": "قيد الانتظار",
+  "boilerplate.containers.Payroll.recruitment.graduationGrade": "درجة التخرج",
+  "boilerplate.containers.Payroll.recruitment.accepted": "مقبول",
+  "boilerplate.containers.Payroll.recruitment.waitingList": "قائمة الانتظار",
+  "boilerplate.containers.Payroll.recruitment.dataBank": "بنك المعلومات",
+  "boilerplate.containers.Payroll.recruitment.fromAge": "السن من",
+  "boilerplate.containers.Payroll.recruitment.viewApplicationForm": "عرض نموذج الطلب",
+  "boilerplate.containers.Payroll.recruitment.updateStatus": "تحديث الحالة",
+  "boilerplate.containers.Payroll.recruitment.sendRejectMail": "إرسال بريد بالرفض",
+  "boilerplate.containers.Payroll.recruitment.downloadCV": "تحميل السيرة الذاتية",
+  "boilerplate.containers.Payroll.recruitment.toAge": "السن الي",
+  "boilerplate.containers.Payroll.recruitment.jobOffer": "عرض عمل",
+  "boilerplate.containers.Payroll.recruitment.rejected": "مرفوض",
+  "boilerplate.containers.Payroll.recruitment.idNumber": "رقم الهوية",
+  "boilerplate.containers.Payroll.recruitment.blackList": "القائمة السوداء",
+  "boilerplate.containers.Payroll.recruitment.site": "المكتب",
+  "boilerplate.containers.Payroll.recruitment.home": "المنزل",
 
   "boilerplate.containers.Payroll.cv.home": "المنزل",
   "boilerplate.containers.Payroll.cv.site": "المكتب",
