--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2012,6 +2012,37 @@
   "boilerplate.containers.Payroll.recruitment.enterDetailsData": "Enter Details Data",
   "boilerplate.containers.Payroll.recruitment.description": "Description",
   "boilerplate.containers.Payroll.recruitment.section": "Section",
+  "boilerplate.containers.Payroll.recruitment.applicantName": "Applicant Name",
+  "boilerplate.containers.Payroll.recruitment.applicantDate": "Applicant Date",
+  "boilerplate.containers.Payroll.recruitment.hrStatus": "HR Status",
+  "boilerplate.containers.Payroll.recruitment.technicalStatus": "Technical Status",
+  "boilerplate.containers.Payroll.recruitment.managerialStatus": "Managerial Status",
+  "boilerplate.containers.Payroll.recruitment.JobAdv": "Job Adv",
+  "boilerplate.containers.Payroll.recruitment.idNumber": "ID Number",
+  "boilerplate.containers.Payroll.recruitment.fromAge": "From Age",
+  "boilerplate.containers.Payroll.recruitment.toAge": "To Age",
+  "boilerplate.containers.Payroll.recruitment.gender": "Gender",
+  "boilerplate.containers.Payroll.recruitment.reason": "Reason",
+  "boilerplate.containers.Payroll.recruitment.technical": "Technical",
+  "boilerplate.containers.Payroll.recruitment.managerialLevel": "Managerial Level",
+  "boilerplate.containers.Payroll.recruitment.pending": "Pending",
+  "boilerplate.containers.Payroll.recruitment.managerNotReviewCV": "Technical Manager Not Review CV",
+  "boilerplate.containers.Payroll.recruitment.confirm": "Confirm",
+  "boilerplate.containers.Payroll.recruitment.viewApplicationForm": "View Application Form",
+  "boilerplate.containers.Payroll.recruitment.updateStatus": "Update Status",
+  "boilerplate.containers.Payroll.recruitment.sendRejectMail": "Send Reject Mail",
+  "boilerplate.containers.Payroll.recruitment.downloadCV": "Download CV",
+  "boilerplate.containers.Payroll.recruitment.graduationGrade": "Graduation Grade",
+  "boilerplate.containers.Payroll.recruitment.workFrom": "Work From",
+  "boilerplate.containers.Payroll.recruitment.status": "Status",
+  "boilerplate.containers.Payroll.recruitment.accepted": "Accepted",
+  "boilerplate.containers.Payroll.recruitment.waitingList": "Waiting List",
+  "boilerplate.containers.Payroll.recruitment.dataBank": "Data Bank",
+  "boilerplate.containers.Payroll.recruitment.jobOffer": "Job Offer",
+  "boilerplate.containers.Payroll.recruitment.rejected": "Rejected",
+  "boilerplate.containers.Payroll.recruitment.blackList": "Black List",
+  "boilerplate.containers.Payroll.recruitment.site": "Site",
+  "boilerplate.containers.Payroll.recruitment.home": "Home",
 
   "boilerplate.containers.Payroll.cv.home": "Home",
   "boilerplate.containers.Payroll.cv.site": "Site",
