--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2099,6 +2099,8 @@
   "boilerplate.containers.Payroll.recruitment.blackList": "القائمة السوداء",
   "boilerplate.containers.Payroll.recruitment.site": "المكتب",
   "boilerplate.containers.Payroll.recruitment.home": "المنزل",
+  "boilerplate.containers.Payroll.recruitment.email": "الايميل",
+  "boilerplate.containers.Payroll.recruitment.phone": "رقم الهاتف",
 
   "boilerplate.containers.Payroll.cv.home": "المنزل",
   "boilerplate.containers.Payroll.cv.site": "المكتب",
