page `SecApplicationReview`: add `techStatusList` table

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2100,6 +2100,7 @@
   "boilerplate.containers.Payroll.recruitment.site": "المكتب",
   "boilerplate.containers.Payroll.recruitment.home": "المنزل",
   "boilerplate.containers.Payroll.recruitment.email": "الايميل",
+  "boilerplate.containers.Payroll.recruitment.comment": "تعليق",
   "boilerplate.containers.Payroll.recruitment.phone": "رقم الهاتف",
 
   "boilerplate.containers.Payroll.cv.home": "المنزل",
