--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2057,6 +2057,7 @@
   "boilerplate.containers.Payroll.recruitment.home": "Home",
   "boilerplate.containers.Payroll.recruitment.email": "Email",
   "boilerplate.containers.Payroll.recruitment.phone": "Phone",
+  "boilerplate.containers.Payroll.recruitment.comment": "Comment",
 
   "boilerplate.containers.Payroll.cv.home": "Home",
   "boilerplate.containers.Payroll.cv.site": "Site",
