--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2102,6 +2102,8 @@
   "boilerplate.containers.Payroll.recruitment.email": "الايميل",
   "boilerplate.containers.Payroll.recruitment.comment": "تعليق",
   "boilerplate.containers.Payroll.recruitment.phone": "رقم الهاتف",
+  "boilerplate.containers.Payroll.recruitment.interviewTime": "وقت المقابلة",
+  "boilerplate.containers.Payroll.recruitment.callStatus": "حالة المكالمة",
 
   "boilerplate.containers.Payroll.cv.home": "المنزل",
   "boilerplate.containers.Payroll.cv.site": "المكتب",
