--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2058,6 +2058,8 @@
   "boilerplate.containers.Payroll.recruitment.email": "Email",
   "boilerplate.containers.Payroll.recruitment.phone": "Phone",
   "boilerplate.containers.Payroll.recruitment.comment": "Comment",
+  "boilerplate.containers.Payroll.recruitment.interviewTime": "Interview Time",
+  "boilerplate.containers.Payroll.recruitment.callStatus": "Call Status",
 
   "boilerplate.containers.Payroll.cv.home": "Home",
   "boilerplate.containers.Payroll.cv.site": "Site",
