finish `HRInterviewEvaluation` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2100,7 +2100,13 @@
   "boilerplate.containers.Payroll.recruitment.site": "المكتب",
   "boilerplate.containers.Payroll.recruitment.home": "المنزل",
   "boilerplate.containers.Payroll.recruitment.email": "الايميل",
+  "boilerplate.containers.Payroll.recruitment.jobEvaluation": "تقييم العمل",
   "boilerplate.containers.Payroll.recruitment.comment": "تعليق",
+  "boilerplate.containers.Payroll.recruitment.finalGrade": "الدرجة النهائية",
+  "boilerplate.containers.Payroll.recruitment.hrTests": "اختبارات الموارد البشرية",
+  "boilerplate.containers.Payroll.recruitment.grade": "الدرجة",
+  "boilerplate.containers.Payroll.recruitment.qualification": "المؤهل",
+  "boilerplate.containers.Payroll.recruitment.employeeName": "اسم الموظف",
   "boilerplate.containers.Payroll.recruitment.phone": "رقم الهاتف",
   "boilerplate.containers.Payroll.recruitment.interviewTime": "وقت المقابلة",
   "boilerplate.containers.Payroll.recruitment.sendInterviewTimeMail": "إرسال بريد وقت المقابلة",
