create startup `HiringRequest` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2112,6 +2112,18 @@
   "boilerplate.containers.Payroll.recruitment.interviewTime": "وقت المقابلة",
   "boilerplate.containers.Payroll.recruitment.sendInterviewTimeMail": "إرسال بريد وقت المقابلة",
   "boilerplate.containers.Payroll.recruitment.callStatus": "حالة المكالمة",
+  "boilerplate.containers.Payroll.recruitment.contractDuration": "مدة العقد",
+  "boilerplate.containers.Payroll.recruitment.elementName": "اسم العنصر",
+  "boilerplate.containers.Payroll.recruitment.value": "القيمة",
+  "boilerplate.containers.Payroll.recruitment.salaryInGross": "الراتب الإجمالي",
+  "boilerplate.containers.Payroll.recruitment.addSalaryElements": "إضافة عناصر الراتب",
+  "boilerplate.containers.Payroll.recruitment.benefits": "الفوائد",
+  "boilerplate.containers.Payroll.recruitment.tools": "الأدوات",
+  "boilerplate.containers.Payroll.recruitment.comments": "تعليقات",
+  "boilerplate.containers.Payroll.recruitment.startDate": "تاريخ البدء",
+  "boilerplate.containers.Payroll.recruitment.position": "المنصب",
+  "boilerplate.containers.Payroll.recruitment.assignTo": "يسند إلى",
+  "boilerplate.containers.Payroll.recruitment.reportingTo": "تقديم التقارير إلى",
 
   "boilerplate.containers.Payroll.cv.home": "المنزل",
   "boilerplate.containers.Payroll.cv.site": "المكتب",
