--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2059,6 +2059,9 @@
   "boilerplate.containers.Payroll.recruitment.phone": "Phone",
   "boilerplate.containers.Payroll.recruitment.finalGrade": "Final Grade",
   "boilerplate.containers.Payroll.recruitment.grade": "Grade",
+  "boilerplate.containers.Payroll.recruitment.elementName": "Element Name",
+  "boilerplate.containers.Payroll.recruitment.value": "Value",
+  "boilerplate.containers.Payroll.recruitment.addSalaryElements": "Add Salary Elements",
   "boilerplate.containers.Payroll.recruitment.interviewStatus": "Interview Status",
   "boilerplate.containers.Payroll.recruitment.jobEvaluation": "Job Evaluation",
   "boilerplate.containers.Payroll.recruitment.hrTests": "Hr Tests",
@@ -2068,6 +2071,15 @@
   "boilerplate.containers.Payroll.recruitment.sendInterviewTimeMail": "Send Interview Time Mail",
   "boilerplate.containers.Payroll.recruitment.interviewTime": "Interview Time",
   "boilerplate.containers.Payroll.recruitment.callStatus": "Call Status",
+  "boilerplate.containers.Payroll.recruitment.contractDuration": "Contract Duration",
+  "boilerplate.containers.Payroll.recruitment.salaryInGross": "Salary In Gross",
+  "boilerplate.containers.Payroll.recruitment.benefits": "Benefits",
+  "boilerplate.containers.Payroll.recruitment.tools": "Tools",
+  "boilerplate.containers.Payroll.recruitment.comments": "Comments",
+  "boilerplate.containers.Payroll.recruitment.startDate": "Start Date",
+  "boilerplate.containers.Payroll.recruitment.position": "Position",
+  "boilerplate.containers.Payroll.recruitment.assignTo": "Assign To",
+  "boilerplate.containers.Payroll.recruitment.reportingTo": "Reporting To",
 
   "boilerplate.containers.Payroll.cv.home": "Home",
   "boilerplate.containers.Payroll.cv.site": "Site",
