create `JobOfferStatus` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2085,6 +2085,10 @@
   "boilerplate.containers.Payroll.recruitment.job": "الوظيفة",
   "boilerplate.containers.Payroll.recruitment.offerDate": "تاريخ الطلب",
   "boilerplate.containers.Payroll.recruitment.experience": "سنوات الخبرة",
+  "boilerplate.containers.Payroll.recruitment.notes": "ملحوظات",
+  "boilerplate.containers.Payroll.recruitment.offerStatus": "حالة العرض",
+  "boilerplate.containers.Payroll.recruitment.date": "تاريخ",
+  "boilerplate.containers.Payroll.recruitment.serial": "مسلسل",
   "boilerplate.containers.Payroll.recruitment.organization": "الادارة",
   "boilerplate.containers.Payroll.recruitment.department": "المنظمة",
   "boilerplate.containers.Payroll.recruitment.enterDetailsData": "أدخل بيانات التفاصيل",
