--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2040,6 +2040,10 @@
   "boilerplate.containers.Payroll.recruitment.jobName": "Job Name",
   "boilerplate.containers.Payroll.recruitment.contractType": "Contract Type",
   "boilerplate.containers.Payroll.recruitment.job": "Job",
+  "boilerplate.containers.Payroll.recruitment.notes": "Notes",
+  "boilerplate.containers.Payroll.recruitment.offerStatus": "Offer Status",
+  "boilerplate.containers.Payroll.recruitment.date": "Date",
+  "boilerplate.containers.Payroll.recruitment.serial": "Serial",
   "boilerplate.containers.Payroll.recruitment.salaryStructure": "Salary Structure",
   "boilerplate.containers.Payroll.recruitment.commession": "Commession",
   "boilerplate.containers.Payroll.recruitment.offerDate": "Offer Date",
