--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -950,7 +950,10 @@
   "boilerplate.containers.Payroll.Actions": "Actions",
   "boilerplate.containers.Payroll.EditHrNotes": "Edit Hr Notes",
   "boilerplate.containers.Payroll.dateErrorMes": "Must To Choose From Date And To Date",
-  "boilerplate.containers.Payroll.FileIsEmpty": "File Is Empty",
+  "boilerplate.containers.Payroll.FileIsEmpty": "File Is Empty",  
+  "boilerplate.containers.Payroll.sort": "Sort",  
+  "boilerplate.containers.Payroll.percentage": "Percentage",  
+  "boilerplate.containers.Payroll.relation": "Relation",
 
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
@@ -1558,9 +1561,51 @@
   "boilerplate.containers.Payroll.Payroll.copytoAllBr": "Copy To All Branches",  
   "boilerplate.containers.Payroll.Payroll.calcInsuranceWithThisTemplate": "Include Soicail Insurance",
   "boilerplate.containers.Payroll.Payroll.rPT_details": "Detailed Report",
-  "boilerplate.containers.Payroll.Payroll.sMSMSG": "SMS Message ",
+  "boilerplate.containers.Payroll.Payroll.sMSMSG": "SMS Message ",  
+  "boilerplate.containers.Payroll.Payroll.PayTemplateCreateTitle": "Add Payment Template",
+  "boilerplate.containers.Payroll.Payroll.PayTemplateUpdateTitle": "Update Payment Template",  
+  "boilerplate.containers.Payroll.Payroll.addElement2": "Add Elements",
+  "boilerplate.containers.Payroll.Payroll.deductElement2": "Deducted Elements",  
+  "boilerplate.containers.Payroll.Payroll.Taxelement": "Tax Elements",
+  "boilerplate.containers.Payroll.Payroll.Inselement": "Insurance Elements",  
+  "boilerplate.containers.Payroll.Payroll.SalaryStructureUpdateTitle": "Update Salary Structure",
+  "boilerplate.containers.Payroll.Payroll.SalaryStructureCreateTitle": "Add Salary Structure",
+  "boilerplate.containers.Payroll.Payroll.ShortName": "Short Name",  
+  "boilerplate.containers.Payroll.Payroll.ElementsCreateTitle": "Add Elements",
+  "boilerplate.containers.Payroll.Payroll.ElementsUpdateTitle": "Update Elements",
 
+  
+  "boilerplate.containers.Payroll.Payroll.variable": "Variable",
+  "boilerplate.containers.Payroll.Payroll.Percentage": "Percentage",
+  "boilerplate.containers.Payroll.Payroll.constant": "Constant",
+  "boilerplate.containers.Payroll.Payroll.Value": "Value",  
+  "boilerplate.containers.Payroll.Payroll.refElement": "Refrenace Elements",
+  "boilerplate.containers.Payroll.Payroll.basicElement": "basic Elements",  
+  "boilerplate.containers.Payroll.Payroll.displayOrder": "Display Order",
+  "boilerplate.containers.Payroll.Payroll.minDailyWorkHours": "min Daily WorkHours",
+  "boilerplate.containers.Payroll.Payroll.elementTaxFreeLimit": "element Tax FreeLimit",
+  
+  "boilerplate.containers.Payroll.Payroll.Allowance": "Allowance",
+  "boilerplate.containers.Payroll.Payroll.Deduct": "Deduction",  
+  "boilerplate.containers.Payroll.Payroll.maxRepeat": "max Repeat/month",  
+  "boilerplate.containers.Payroll.Payroll.elementRepeat": "Element has max Occurance/Month",
 
+  
+  "boilerplate.containers.Payroll.Payroll.salayElememt": "Element of month salary",
+  "boilerplate.containers.Payroll.Payroll.refranceElement": "Is arefrenac Element",
+  "boilerplate.containers.Payroll.Payroll.relatedToWorkdays": "Related to work days",
+  
+  "boilerplate.containers.Payroll.Payroll.inWeb": "dispaly in Web",
+  "boilerplate.containers.Payroll.Payroll.calcIneachTemplate": "Calculated in each template",
+  "boilerplate.containers.Payroll.Payroll.percentOfDaily": "Percent of Daily Work",
+  "boilerplate.containers.Payroll.Payroll.defaultValue": "Default Value",
+  "boilerplate.containers.Payroll.Payroll.elemMaxMin": "Element has Max/Min value",
+
+  "boilerplate.containers.Payroll.Payroll.min": "Minimum",
+    "boilerplate.containers.Payroll.Payroll.max": "Maximum",
+    "boilerplate.containers.Payroll.Payroll.calcValMin": "Minimum Calc Value",
+    "boilerplate.containers.Payroll.Payroll.calcValMax": "Maximum Calc Value",
+    
 
   "boilerplate.containers.Payroll.transportaion.ip":"Transportaion",  
   "boilerplate.containers.Payroll.transportaion.DeviceUpdateTitle":"Update Device",
