finish BranchSalarySetting page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1558,6 +1558,34 @@
   "boilerplate.containers.Payroll.Payroll.copytoAllBr": "Copy To All Branches",
 
 
+  "boilerplate.containers.Payroll.Payroll.payrollMainParameters": "Payroll Main Parameters",
+  "boilerplate.containers.Payroll.Payroll.Department": "Department",
+  "boilerplate.containers.Payroll.Payroll.TaxeParameters": "Taxe Parameters",
+  "boilerplate.containers.Payroll.Payroll.PersonalExemption": "Personal Exemption",
+  "boilerplate.containers.Payroll.Payroll.specialNeedsExemption": "Special Needs Exemption",
+  "boilerplate.containers.Payroll.Payroll.FirstBracketLimit": "First Bracket Limit",
+  "boilerplate.containers.Payroll.Payroll.FirstBracketTax": "First Bracket Tax",
+  "boilerplate.containers.Payroll.Payroll.SecondBracketLimit": "Second Bracket Limit",
+  "boilerplate.containers.Payroll.Payroll.SecondBracketTax": "Second Bracket Tax",
+  "boilerplate.containers.Payroll.Payroll.ThirdBracketLimit": "Third Bracket Limit",
+  "boilerplate.containers.Payroll.Payroll.ThirdBracketTax": "Third Bracket Tax",
+  "boilerplate.containers.Payroll.Payroll.FourthBracketLimit": "Fourth Bracket Limit",
+  "boilerplate.containers.Payroll.Payroll.FourthBracketTax": "Fourth Bracket Tax",
+  "boilerplate.containers.Payroll.Payroll.FifthBracketLimit": "Fifth Bracket Limit",
+  "boilerplate.containers.Payroll.Payroll.FifthBracketTax": "Fifth Bracket Tax",
+  "boilerplate.containers.Payroll.Payroll.SixthBracketLimit": "Sixth Bracket Limit",
+  "boilerplate.containers.Payroll.Payroll.SixthBracketTax": "Sixth Bracket Tax",
+  "boilerplate.containers.Payroll.Payroll.seventhBracketLimit": "Seventh Bracket Limit",
+  "boilerplate.containers.Payroll.Payroll.seventhBracketTax": "seventh Bracket Tax",
+  "boilerplate.containers.Payroll.Payroll.EighthBracketLimit": "Eighth Bracket Limit",
+  "boilerplate.containers.Payroll.Payroll.EighthBracketTax": "Eighth Bracket Tax",
+  "boilerplate.containers.Payroll.Payroll.EpidemicsContribution": "Epidemics Contribution",
+  "boilerplate.containers.Payroll.Payroll.DisplayName": "Display Name",
+  "boilerplate.containers.Payroll.Payroll.FixedElementsSILimit": "Fixed Elements SI Limit",
+  "boilerplate.containers.Payroll.Payroll.CompanyShare": "Company Share",
+  "boilerplate.containers.Payroll.Payroll.TheEmployeesShareOfSI": "The Employee's Share Of SI",
+  "boilerplate.containers.Payroll.Payroll.SocialInsuranceParameters": "Social Insurance Parameters",
+
 
   "boilerplate.containers.Payroll.transportaion.ip":"Transportaion",  
   "boilerplate.containers.Payroll.transportaion.DeviceUpdateTitle":"Update Device",
