--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1603,6 +1603,36 @@
     "boilerplate.containers.Payroll.Payroll.safe": "خزنة الصرف",
     "boilerplate.containers.Payroll.Payroll.maxLoan": "الحد الاقصى للسلفة",
     "boilerplate.containers.Payroll.Payroll.copytoAllBr": "نسخ لكل الفروع",
+
+
+
+    "boilerplate.containers.Payroll.Payroll.payrollMainParameters": "ثوابت الاجور",
+    "boilerplate.containers.Payroll.Payroll.Department": "القسم",
+    "boilerplate.containers.Payroll.Payroll.TaxeParameters": "الضرائب",
+    "boilerplate.containers.Payroll.Payroll.PersonalExemption": "قيمة الاعفاء الشخصى",
+    "boilerplate.containers.Payroll.Payroll.specialNeedsExemption": "قيمة اعفاء متحدى الاعاقة",
+    "boilerplate.containers.Payroll.Payroll.FirstBracketLimit": "حد الشريحة الاولى",
+    "boilerplate.containers.Payroll.Payroll.FirstBracketTax": "الضريبة على الشريحة الاولى",
+    "boilerplate.containers.Payroll.Payroll.SecondBracketLimit": "حد الشريحة الثانية",
+    "boilerplate.containers.Payroll.Payroll.SecondBracketTax": "الضريبة على الشريحة الثانية",
+    "boilerplate.containers.Payroll.Payroll.ThirdBracketLimit": "حد الشريحة الثالثة",
+    "boilerplate.containers.Payroll.Payroll.ThirdBracketTax": "الضريبة على الشريحة الثالثة",
+    "boilerplate.containers.Payroll.Payroll.FourthBracketLimit": "حد الشريحة الرابعة",
+    "boilerplate.containers.Payroll.Payroll.FourthBracketTax": "الضريبة على الشريحة الرابعة",
+    "boilerplate.containers.Payroll.Payroll.FifthBracketLimit": "حد الشريحة الخامسه",
+    "boilerplate.containers.Payroll.Payroll.FifthBracketTax": "الضريبة على الشريحة الخامسة",
+    "boilerplate.containers.Payroll.Payroll.SixthBracketLimit": "حد الشريحة السادسة",
+    "boilerplate.containers.Payroll.Payroll.SixthBracketTax": "الشريبة على الشريحة السادسة",
+    "boilerplate.containers.Payroll.Payroll.seventhBracketLimit": "حد الشريحة السابعة",
+    "boilerplate.containers.Payroll.Payroll.seventhBracketTax": "الضريبة على الشريحة السابعة",
+    "boilerplate.containers.Payroll.Payroll.EighthBracketLimit": "حد الشريحة الثامنة",
+    "boilerplate.containers.Payroll.Payroll.EighthBracketTax": "الضريبة على الشريحة الثامنة",
+    "boilerplate.containers.Payroll.Payroll.EpidemicsContribution": "Epidemics Contribution",
+    "boilerplate.containers.Payroll.Payroll.DisplayName": "المسمى في شريط القبض",
+    "boilerplate.containers.Payroll.Payroll.FixedElementsSILimit": "الحد الاقصى لربط التامينات على العناصر الثابتة",
+    "boilerplate.containers.Payroll.Payroll.CompanyShare": "حصة الشركة من التامينات",
+    "boilerplate.containers.Payroll.Payroll.TheEmployeesShareOfSI": "حصة الموظف من التامينات على الثابت",
+    "boilerplate.containers.Payroll.Payroll.SocialInsuranceParameters": "التامينات الاجتماعية",
     
   
   "boilerplate.containers.Payroll.Workflow.documentName": "اسم الملف",
