--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -955,6 +955,8 @@
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
   "boilerplate.containers.Payroll.Setting.delete": "Delete",
+  "boilerplate.containers.Payroll.Setting.subject": "Subject",
+  "boilerplate.containers.Payroll.Setting.formTypeName": "Form Type Name",
   "boilerplate.containers.Payroll.Setting.update": "Update",
   "boilerplate.containers.Payroll.Setting.add": "Add",
   "boilerplate.containers.Payroll.Setting.view": "View",
